.kube/consul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consul
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kube-weather-shared-network: "true"
        io.kompose.service: consul
    spec:
      containers:
        - image: ianunay/weather-app-ssm:v1
          name: consul-ssm
          ports:
            - containerPort: 8500
            - containerPort: 8600
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /consul/data
              name: consul-claim0
      restartPolicy: Always
      volumes:
        - name: consul-claim0
          persistentVolumeClaim:
            claimName: consul-claim0
status: {}
