.kube/redis-cache-weather-prediction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-cache-weather-prediction
  name: redis-cache-weather-prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-cache-weather-prediction
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kube-weather-shared-network: "true"
        io.kompose.service: redis-cache-weather-prediction
    spec:
      containers:
        - image: redis
          name: redis-cache-weather-prediction
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis-cache-weather-prediction-claim0
      restartPolicy: Always
      volumes:
        - name: redis-cache-weather-prediction-claim0
          persistentVolumeClaim:
            claimName: redis-cache-weather-prediction-claim0
status: {}
