.kube/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kube-weather-shared-network: "true"
        io.kompose.service: ui
    spec:
      containers:
        - image: ianunay/weather-app-ui:v0
          name: ui
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
