.kube/consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  ports:
    - name: "8500"
      port: 8500
      targetPort: 8500
    - name: "8600"
      port: 8600
      protocol: UDP
      targetPort: 8600
  selector:
    io.kompose.service: consul
status:
  loadBalancer: {}
