.kube/kube-weather-shared-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kube-weather-shared-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kube-weather-shared-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kube-weather-shared-network: "true"
